# cli-judge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RUBRIC.md  SPEC.md
.github/workflows/: atb.yml  cli-judge.yml
BUILD_INSTRUCTIONS/: claude-code.md  codex.md  gemini.md  generic.md  hermes.md
docs/: FAQ.md  METHODOLOGY.md  ROADMAP.md  STRATEGY.md  THREAT_MODEL.md
docs/plans/: 2026-06-14-001-feat-cli-judge-rename-and-harness-completion-plan.md
fixtures/: CATALOG.md
harness/: README.md  pyproject.toml
harness/adapters/: cli_anything_adapter.py  pp_cli_adapter.py
harness/atb/: __init__.py  adapter.py  cli.py  envelope.py  report.py  runner.py
harness/atb/scorers/: _assertlib.py  d1_correctness.py  d2_noninteractive.py  d5_efficiency.py
harness/cli_judge/: __init__.py  adapter.py  cli.py  envelope.py  loader.py  replay.py  report.py  runner.py
harness/cli_judge/scorers/: __init__.py  _assertlib.py  d1_correctness.py  d2_noninteractive.py  d3_portability.py  d4_safety.py  d5_efficiency.py
harness/examples/: echo_adapter.py
harness/tests/: test_adapters.py  test_assertlib.py  test_envelope.py  test_golden.py  test_loader.py  test_replay.py  test_report.py  test_scorers.py  test_selftest.py  test_suites.py
harness/tests/golden/: core_scorecard.md
schemas/: capability_envelope.schema.json  fixture.schema.json  receipt.schema.json  task.schema.json
suites/: core.yaml  efficiency.yaml  full.yaml  portability.yaml  safety.yaml
templates/: adapter.template.py  fixture.template.json  task.template.json
(+36 files in other folders)
