[project]
name = "atb"
version = "0.1.0"
description = "AgentTool-Bench: reality-grounded benchmark + verification harness for agent-native CLIs/MCP servers/harnesses"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "jsonschema>=4.0",
]

[project.optional-dependencies]
receipts = ["cryptography>=41.0"]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "ruff", "mypy"]

[project.scripts]
atb = "atb.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["atb*"]
