[project]
name = "cli-judge"
version = "0.1.0"
description = "CLI-Judge: reality-grounded benchmark + verification harness for agent-native CLIs/MCP servers/harnesses"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "jsonschema>=4.0",
]

[project.optional-dependencies]
receipts = ["cryptography>=41.0"]
dev = ["pytest>=7.0", "ruff", "mypy"]

[project.scripts]
cli-judge = "cli_judge.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_judge*"]
